--- a/contact.html
+++ b/contact.html
@@ -1,42 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <title>Sumit Chand- Researcher Profile</title>
 </head>
 <body>
     <header>
+        <div class="banner">
+            <h1>Sumit Chand</h1>
+        </div>
         <nav>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+            <ul>
+                <li><a href="https://www.linkedin.com/feed/">Home</a></li>
+                <li><a href="https://www.linkedin.com/feed/">Publications</a></li>
+                <li><a href="https://www.linkedin.com/feed/">Blog</a></li>
+                <li><a href="https://www.linkedin.com/feed/">CV</a></li>
             </ul>
         </nav>
     </header>
-
     <main>
-        <section>
-            <h1>Contact Us</h1>
-            <form>
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" required></textarea>
-
-                <button type="submit">Submit</button>
-            </form>
-        </section>
+        <div class="profile">
+            <div class="profile-image">
+                <img src="images/Kirtika.jpg" alt="Profile Image">
+            </div>
+            <div class="profile-info">
+                <h2>Sumit Chand</h2>
+                <p>PhD Scholar | Indian Institute of Technology Delhi | AI & Machine Learning | Data Science & Analytics | Project Scientist at IITD</p>
+                <p>IIT Delhi</p>
+                <div class="social-links">
+                   <a href="#"><i class="fab fa-twitter"></i> Twitter</a>
+                    <a href="#"><i class="fab fa-github"></i> GitHub</a>
+                    <a href="#"><i class="fab fa-linkedin"></i> LinkedIn</a>
+                    <a href="#"><i class="fas fa-envelope"></i> Email</a>
+                    <a href="#"><i class="fas fa-graduation-cap"></i> Google Scholar</a>
+                </div>
+            </div>
+        </div>
+        <div class="profile-description">
+            <p>Senior Manager at Saxo Bank | FinTech Specialist | AI & Machine Learning Enthusiast | Continuous Learner</p>
+            <p>Being a continuous learner, I’ve been diving into AI, Machine Learning, and Large Language Models these days. Leveraging online courses, engaging with tech communities, and applying new skills to real-world problems are key steps in this journey, that I thoroughly enjoy. I truly believe - "The best time to start is now! "🌟</p>
+        </div>
     </main>
-
     <footer>
-        <p>&copy; 2024 Your Name. All Rights Reserved.</p>
+        <p>&copy; 2024 Sumit Chand. All rights reserved.</p>
     </footer>
 </body>
 </html>
