--- a/contact.html
+++ b/contact.html
@@ -25,12 +25,12 @@
     <main>
         <div class="profile">
             <div class="profile-image">
-                <img src="images/Kirtika.jpg" alt="Profile Image">
+                <img src="images/Sumit.jpg" alt="Profile Image">
             </div>
             <div class="profile-info">
                 <h2>Sumit Chand</h2>
-                <p>PhD Scholar | Indian Institute of Technology Delhi | AI & Machine Learning | Data Science & Analytics | Project Scientist at IITD</p>
-                <p>IIT Delhi</p>
+                <p>Senior Manager at Saxo Bank | FinTech Specialist | AI & Machine Learning Enthusiast | Continuous Learner</p>
+                <p>Saxo Bank</p>
                 <div class="social-links">
                    <a href="#"><i class="fab fa-twitter"></i> Twitter</a>
                     <a href="#"><i class="fab fa-github"></i> GitHub</a>
