--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <title>Sumit Chand</title>
+    <title>Sumit Chand- Researcher Profile</title>
 </head>
 <body>
     <header>
@@ -29,8 +29,8 @@
             </div>
             <div class="profile-info">
                 <h2>Sumit Chand</h2>
-                <p>PhD Scholar | Indian Institute of Technology Delhi | AI & Machine Learning | Data Science & Analytics | Project Scientist at IITD</p>
-                <p>IIT Delhi</p>
+                <p>Senior Manager at Saxo Bank | FinTech Specialist | AI & Machine Learning Enthusiast | Continuous Learner</p>
+                <p>Saxo Bank</p>
                 <div class="social-links">
                    <a href="#"><i class="fab fa-twitter"></i> Twitter</a>
                     <a href="#"><i class="fab fa-github"></i> GitHub</a>
