--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-     <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <title>Sumit Chand- Researcher Profile</title>
+    <title>Sumit Chand - Researcher Profile</title>
+    <style>
+        /* Styling the dropdown menu */
+        .dropdown {
+            position: relative;
+            display: inline-block;
+        }
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #f9f9f9;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+            z-index: 1;
+        }
+        .dropdown-content a {
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+        }
+        .dropdown-content a:hover {
+            background-color: #f1f1f1;
+        }
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -17,7 +44,14 @@
             <ul>
                 <li><a href="https://www.linkedin.com/feed/">Home</a></li>
                 <li><a href="https://www.linkedin.com/feed/">Publications</a></li>
-                <li><a href="https://www.linkedin.com/feed/">Blog</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropbtn">Blog</a>
+                    <div class="dropdown-content">
+                        <a href="Statistics.html">Statistical testing</a>
+                        <a href="Statistics.html">Blog Post 2</a>
+                        <a href="Statistics.html">Write a Blog</a>
+                    </div>
+                </li>
                 <li><a href="https://www.linkedin.com/feed/">CV</a></li>
             </ul>
         </nav>
@@ -32,7 +66,7 @@
                 <p>Senior Manager at Saxo Bank | FinTech Specialist | AI & Machine Learning Enthusiast | Continuous Learner</p>
                 <p>Saxo Bank</p>
                 <div class="social-links">
-                   <a href="#"><i class="fab fa-twitter"></i> Twitter</a>
+                    <a href="#"><i class="fab fa-twitter"></i> Twitter</a>
                     <a href="#"><i class="fab fa-github"></i> GitHub</a>
                     <a href="#"><i class="fab fa-linkedin"></i> LinkedIn</a>
                     <a href="#"><i class="fas fa-envelope"></i> Email</a>
